The department array from the EmployesComponent moved on to the AppComponent and converted to the Department items array, also the Department interface has been generated for which.

--- a/LearnComponents/src/app/app.component.html
+++ b/LearnComponents/src/app/app.component.html
@@ -8,6 +8,6 @@
 </div>
 <div class="row">
     <div class="col-12">
-        <app-employes (btnData)="btnData($event)"></app-employes>
+        <app-employes [departments]="departmentsConfig" (btnData)="btnData($event)"></app-employes>
     </div>
 </div>
