Fixed html markup and css.

--- a/LearnComponents/src/app/app.component.html
+++ b/LearnComponents/src/app/app.component.html
@@ -1,13 +1,19 @@
-<h1>{{title}}</h1>
-<div class="row">
-    <div class="col-12">
-        <div *ngFor="let employe of filteredEmployes">
-            <p>{{employe.id}}. {{employe.name}} {{employe.surname}} - {{employe.department}}</p>
+<main>
+    <div class="container">
+        <div class="row">
+            <h1>{{title}}</h1>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div *ngFor="let employe of filteredEmployes">
+                    <p>{{employe.id}}. {{employe.name}} {{employe.surname}} - {{employe.department}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <app-employes [departments]="departmentsConfig" (btnData)="btnData($event)"></app-employes>
+            </div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-12">
-        <app-employes [departments]="departmentsConfig" (btnData)="btnData($event)"></app-employes>
-    </div>
-</div>
+</main>
