Application development complete.

--- a/articles-app/src/app/components/article-detail/article-detail.component.html
+++ b/articles-app/src/app/components/article-detail/article-detail.component.html
@@ -1,1 +1,5 @@
-<p>article-detail works!</p>
+<div *ngIf="article">
+  <h2>{{ article.title }}</h2>
+  <p>{{ article.content }}</p>
+  <button class="btn btn-secondary" (click)="onCancel()">Cancel</button>
+</div>
