--- a/articles-app/src/app/components/article-list/article-list.component.html
+++ b/articles-app/src/app/components/article-list/article-list.component.html
@@ -1,1 +1,36 @@
-<p>article-list works!</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand my-1 ms-5" href="#">Final App</a>
+  </div>
+</nav>
+
+<div class="container mt-4">
+  <button class="btn btn-primary mb-3" (click)="createArticle()">Create New Article</button>
+
+  <ul class="list-group">
+    <li *ngFor="let article of articles" class="list-group-item d-flex justify-content-between align-items-center">
+      <span (click)="selectArticle(article)" class="article-title">{{ article.title }}</span>
+      <div  class="btn-group" role="group">
+        <button class="btn btn-sm btn-success" (click)="editArticle(article)">Edit</button>
+        <button class="btn btn-sm btn-danger" (click)="deleteArticle(article.id)">Delete</button>
+      </div>
+    </li>
+  </ul>
+
+  <div class="container app-article">
+    <app-article-form
+      *ngIf="isCreating || isEditing"
+      [article]="selectedArticle!"
+      (formSubmitted)="onFormSubmitted()"
+      (cancel)="cancel()">
+    </app-article-form>
+  </div>
+  
+  <div class="container app-article">
+    <app-article-detail
+      *ngIf="selectedArticle && !isCreating && !isEditing"
+      [article]="selectedArticle!"
+      (cancel)="cancel()">
+    </app-article-detail>
+  </div>
+</div>
