--- a/articles-app/src/app/components/article-form/article-form.component.html
+++ b/articles-app/src/app/components/article-form/article-form.component.html
@@ -1,1 +1,17 @@
-<p>article-form works!</p>
+<form (ngSubmit)="onSubmit()">   
+  <div class="mb-3">
+    <label class="form-label" for="title">Title</label>
+    <input class="form-control" placeholder="Put an article title" type="text" id="title" [(ngModel)]="article.title" name="title" required>
+  </div>
+  <div class="mb-3">
+    <label class="form-label" for="content">Content</label>
+    <textarea class="form-control" id="content" placeholder="Put an article content" [(ngModel)]="article.content" name="content" required></textarea>
+  </div>
+
+  <div class="col-2">
+    <div class="buttons">
+      <button type="submit" class="btn btn-primary mr-2">Save</button>
+      <button type="button" class="btn btn-secondary" (click)="onCancel()">Cancel</button>
+    </div>
+  </div>
+</form>
