The Confirm dialog was added and fixed app.component.html

--- a/articles-app/src/app/app.component.html
+++ b/articles-app/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="container-fluid app-header">
   <div class="row">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand my-1 ms-5" href="/">{{title}}</a>
+      </div>
+    </nav>
+    
     <app-article-list></app-article-list>
   </div>
 </div>
