--- a/articles-app/src/app/components/article-form/article-form.component.html
+++ b/articles-app/src/app/components/article-form/article-form.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-uppercase">{{title}}</h2>
 <form (ngSubmit)="onSubmit()">   
   <div class="mb-3">
     <label class="form-label" for="title">Title</label>
