--- a/articles-app/src/app/app.component.html
+++ b/articles-app/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand my-1 ms-5" href="/">{{title}}</a>
+        <a class="navbar-brand my-1 ms-5 text-uppercase" href="/">{{title}}</a>
       </div>
     </nav>
     
