--- a/articles-app/src/app/components/article-form/article-form.component.html
+++ b/articles-app/src/app/components/article-form/article-form.component.html
@@ -1,12 +1,12 @@
 <h2 class="text-uppercase">{{title}}</h2>
-<form (ngSubmit)="onSubmit()">   
+<form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">   
   <div class="mb-3">
     <label class="form-label" for="title">Title</label>
-    <input class="form-control" placeholder="Put an article title" type="text" id="title" [(ngModel)]="article.title" name="title" required>
+    <input class="form-control" placeholder="Put an article title" type="text" id="title" [ngModel]="article.title" name="title" required>
   </div>
   <div class="mb-3">
     <label class="form-label" for="content">Content</label>
-    <textarea class="form-control" id="content" placeholder="Put an article content" [(ngModel)]="article.content" name="content" required></textarea>
+    <textarea class="form-control" id="content" placeholder="Put an article content" [ngModel]="article.content" name="content" required></textarea>
   </div>
 
   <div class="col-2">
